[package]
name = "stall"
version = "0.1.4"
authors = ["Skylor R Schermer <skyschermer@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/solarretrace/stall-rs"
description = "A simple local configuration management utility"
readme = "readme.md"
keywords = []
homepage = "https://github.com/solarretrace/stall-rs"
exclude = [
	"*.sublime-project",
	"*.sublime-workspace",
	".stall",
]

[lib]
name = "stall"

[features]
default = []

# Required dependencies
[dependencies]
rustc_version_runtime = "0.1"
anyhow = "1.0"
clap = { version = "3.1", features = ["derive", "suggestions", "color"] }
colored = { version = "2.0" }
fcmp = { version = "*", git = "https://github.com/solarretrace/fcmp-rs" }
fern = { version = "0.6", features = ["colored"] }
log = { version = "0.4", features = ["serde"] }
ron = "0.6"
serde = { version = "1.0", features = ["derive"] }

# Use local tephra libraries.
[patch."https://github.com/solarretrace/fcmp-rs"]
fcmp = { path = "../fcmp-rs/" }

# Optional dependencies

# Dependencies used for tests, examples, and benches.
[dev-dependencies]


# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
incremental = true
overflow-checks = true

# Development profile overrides, ensure dependent crates run fast.
[profile.dev.package."*"]
opt-level = 3
debug-assertions = false
codegen-units = 1


# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = true
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = true


