[package]
name = "stall"
version = "0.1.6"
authors = ["Skylor R Schermer <skyschermer@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/solarretrace/stall-rs"
description = "A simple local configuration management utility"
readme = "readme.md"
keywords = []
homepage = "https://github.com/solarretrace/stall-rs"
exclude = [
	"*.sublime-project",
	"*.sublime-workspace",
	".stall",
]

[lib]
name = "stall"

[features]
default = []

# Required dependencies
[dependencies]
anyhow = "1.0"
clap = { version = "3.1", features = ["derive", "suggestions", "color"] }
colored = { version = "2.0" }
fcmp = { version = "*", git = "https://github.com/solarretrace/fcmp-rs" }
ron = "0.7"
rustc_version_runtime = "0.1"
serde = { version = "1.0", features = ["derive"] }
tracing = { version = "0.1.31" }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


# Use local tephra libraries.
[patch."https://github.com/solarretrace/fcmp-rs"]
fcmp = { path = "../fcmp-rs/" }

# Optional dependencies

# Dependencies used for tests, examples, and benches.
[dev-dependencies]
pretty_assertions = "*"


# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
incremental = true
overflow-checks = true

# Development profile overrides, ensure dependent crates run fast.
[profile.dev.package."*"]
opt-level = 3
debug-assertions = false
codegen-units = 1


# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = true
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = true

[badges]
maintenance = { status = "passively-maintained" }

