[package]
name = "stall"
version = "0.2.0"
authors = ["Skylor R Schermer <skyschermer@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/solarretrace/stall-rs"
description = "A simple local configuration management utility"
readme = "readme.md"
keywords = []
homepage = "https://github.com/solarretrace/stall-rs"
exclude = [
	"*.sublime-project",
	"*.sublime-workspace",
	".stall",
]

[lib]
name = "stall"

[features]
default = []

# Required dependencies
[dependencies]
anyhow = "1.0.50"
bimap = { version = "0.6.2", features = ["serde"] }
clap = { version = "3.1.0", features = ["derive", "suggestions", "color"] }
colored = { version = "2.0.0" }
either = "1.6.1"
fcmp = { version = "0.1.0", git = "https://github.com/solarretrace/fcmp-rs" }
ron = "0.7.0"
rustc_version_runtime = "0.1"
serde = { version = "1.0", features = ["derive"] }
tracing = { version = "0.1.31" }
tracing-appender = "0.2.0"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }


# Use local fcmp library.
[patch."https://github.com/solarretrace/fcmp-rs"]
fcmp = { path = "../fcmp-rs/" }

# Optional dependencies

# Dependencies used for tests, examples, and benches.
[dev-dependencies]
# pretty_assertions = "1.1.0"
temp-dir = "0.1.11"
test-log = { version = "0.2.8", default_features = false, features = ["trace"] }
tracing = { version = "0.1.31", default-features = false }
tracing-subscriber = { version = "0.3.9", default_features = false, features = ["env-filter", "fmt"] }


# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
incremental = true
overflow-checks = true

# Development profile overrides, ensure dependent crates run fast.
[profile.dev.package."*"]
opt-level = 3
debug-assertions = false
codegen-units = 1
#strip = "debuginfo"

# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = true
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = true
#strip = "debuginfo"

[badges]
maintenance = { status = "passively-maintained" }

